# yt-transcriber

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  launch_tui.bat  pyproject.toml
core/: __init__.py  cache.py  llm.py  media_downloader.py  media_transcriber.py  models.py  settings.py  translator.py  utils.py
docs/superpowers/plans/: 2026-05-06-cleanup-postkits-summary-reorg-outputs.md
docs/superpowers/specs/: 2026-04-30-tui-yt-transcriber-design.md  2026-05-06-cleanup-postkits-summary-reorg-outputs-design.md
plans/: 2026-04-30-tui-ux-refresh-plan.md  2026-04-30-tui-yt-transcriber-plan.md
tests/: __init__.py  conftest.py  test_performance_issues.py
tests/core/: test_cache.py  test_llm.py  test_media_downloader.py  test_media_transcriber.py  test_models.py  test_settings.py  test_translator.py  test_utils.py
tests/yt_transcriber/: __init__.py  test_cli.py  test_models.py  test_post_kits_generator.py  test_service.py  test_summarizer.py  test_tui.py  test_utils.py
yt_transcriber/: cli.py  models.py  post_kits_generator.py  service.py  summarizer.py  tui.py  utils.py  whisper_context.py
